demoapp/release-04/frontend-deployment-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-v2
  labels:
    app: frontend
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v2
  template:
    metadata:
      labels:
        app: frontend
        version: v2
    spec:
      serviceAccountName: frontend
      containers:
        - name: frontend
          image: demoapp_frontend:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 80
