demoapp/release-04/frontend-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend
spec:
  host: frontend
#  trafficPolicy: # Apply to all ports
#    tls:
#      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
    - "istio-ingress.local"
    - "frontend.istio-ingress.local"
  gateways:
    - demoapp-gateway
  http:
    - match:
      route:
        - destination:
#            FQDN version if namespaced otherwise short name will do
#            host: frontend.default.svc.cluster.local
            host: frontend
            subset: v2
          weight: 10
        - destination:
            host: frontend
            subset: v1
          weight: 90
